Fixing top position for arrows on mobile

--- a/src/Components/Slideshow/Slideshow.css
+++ b/src/Components/Slideshow/Slideshow.css
@@ -31,6 +31,9 @@
 
 @media screen and (max-width: 750px) {
 
+    .slideshow-button {
+        top: 45%;
+    }
     .slideshow-button img {
         width: 15px;
     }
